feat(components/molecule/collapsible): use regular value from theme

--- a/components/molecule/collapsible/src/_settings.scss
+++ b/components/molecule/collapsible/src/_settings.scss
@@ -6,7 +6,7 @@ $bg-collapsible-container-gradient: linear-gradient(
   $bgc-collapsible-container-transparent 80%
 );
 $c-collapsible-btn: $c-primary !default;
-$fw-collapsible-btn: normal !default;
+$fw-collapsible-btn: $fw-regular !default;
 $fz-collapsible-btn: 100% !default;
 $c-collapsible-icon: $c-collapsible-btn !default;
 $h-collapsible-container-gradient: 48px !default;
