fix(components/molecule/notification): fix demo and outline styles
ISSUES CLOSED: #2013

--- a/components/molecule/notification/src/styles/index.scss
+++ b/components/molecule/notification/src/styles/index.scss
@@ -98,11 +98,17 @@ $base-class: '.sui-MoleculeNotification';
     box-shadow: $bxsh-notification-outline;
     color: $c-notification-outline;
 
+    #{$base-class}-content {
+      padding: $p-l - $bdw-notification-outline;
+    }
+
     // Type variations
     @each $key, $value in $notification-type-colors {
       &#{$base-class}--#{$key} {
         border-color: #{$value};
-        #{$base-class}-iconLeft svg {
+        color: #{$value};
+        #{$base-class}-iconLeft svg,
+        #{$base-class}-iconClose svg {
           fill: #{$value} !important;
         }
       }
