feat(components/molecule/breadcrumb): add border radius token for desktop resolutions, set 0 as defa

--- a/components/molecule/breadcrumb/src/settings.scss
+++ b/components/molecule/breadcrumb/src/settings.scss
@@ -1,3 +1,4 @@
+$bdrs-breadcrumb-desktop: 0 !default;
 $bgc-breadcrumb: transparent !default;
 $bxsh-breadcrumb: none !default;
 $p-breadcrumb-desktop: $p-m $p-l !default;
