--- a/components/molecule/rating/src/styles/index.scss
+++ b/components/molecule/rating/src/styles/index.scss
@@ -9,6 +9,10 @@ $class-label-link: '#{$class-label}Link';
   display: flex;
   margin-left: $m-l-molecule-rating-stars;
 
+  &.is-hoverable {
+    cursor: pointer;
+  }
+
   &.is-active {
     color: $c-molecule-rating-svg-hover;
   }
