feat(components/molecule/tabs): add new token for tab border radius

--- a/components/molecule/tabs/src/styles/settings.scss
+++ b/components/molecule/tabs/src/styles/settings.scss
@@ -3,6 +3,7 @@ $bb-sui-molecule-tabs-fullwidth: 1px solid $bdc-sui-molecule-tabs !default;
 $bc-sui-molecule-tabs-highlighted: transparent !default;
 $bdc-sui-molecule-tabs-highlighted-vertical-right: $bdc-sui-molecule-tabs !default;
 $bdc-sui-molecule-tabs-highlighted: transparent !default;
+$bdrs-sui-molecule-tabs: 0 !default;
 $bdw-sui-molecule-tabs: $p-s !default;
 $bdw-sui-molecule-tabs-highlighted-active: $bdw-sui-molecule-tabs !default;
 $bdw-sui-molecule-tabs-highlighted: 0 !default;
