--- a/components/molecule/progressSteps/src/styles/index.scss
+++ b/components/molecule/progressSteps/src/styles/index.scss
@@ -1,4 +1,5 @@
 $base-class: '.sui-MoleculeProgressSteps';
+$content-class: $base-class + '-content';
 
 #{$base-class} {
   &-path {
@@ -106,17 +107,34 @@ $base-class: '.sui-MoleculeProgressSteps';
     }
   }
   &-compressedInfo,
-  &-content {
-    overflow: hidden;
+  #{$content-class} {
     display: flex;
+    overflow: hidden;
     &-item {
       margin-right: -100%;
-      visibility: hidden;
       flex-basis: 100%;
       flex-shrink: 0;
       &--active {
         margin-right: 0;
-        visibility: inherit;
+      }
+    }
+
+    &--fixed {
+      #{$content-class}-item {
+        visibility: hidden;
+        &--active {
+          visibility: inherit;
+        }
+      }
+    }
+
+    &--fluid {
+      #{$content-class}-item {
+        display: none;
+
+        &--active {
+          display: flex;
+        }
       }
     }
   }
