feat(components/molecule/progressSteps): add compressedInfo className

--- a/components/molecule/progressSteps/src/styles/index.scss
+++ b/components/molecule/progressSteps/src/styles/index.scss
@@ -141,8 +141,10 @@ $content-class: $base-class + '-content';
 
   #{$base-class}-compressedInfo {
     &-item {
+      visibility: hidden;
       &--active {
         margin-right: 0;
+        visibility: inherit;
       }
     }
   }
