--- a/components/molecule/tabs/src/_settings.scss
+++ b/components/molecule/tabs/src/_settings.scss
@@ -7,6 +7,8 @@ $bdrs-sui-molecule-tabs: 0 !default;
 $bdw-sui-molecule-tabs: $p-s !default;
 $bdw-sui-molecule-tabs-highlighted-active: $bdw-sui-molecule-tabs !default;
 $bdw-sui-molecule-tabs-highlighted: 0 !default;
+$bg-sui-molecule-tab-item: transparent !default;
+$bg-sui-molecule-tabs-content: transparent !default;
 $bgc-sui-molecule-tabs-active: transparent !default;
 $bgc-sui-molecule-tabs: transparent !default;
 $bt-sui-molecule-tabs-content: $bdw-sui-molecule-tabs-highlighted solid
