feat(components/atom/icon): allow to inherit display to the main class

--- a/components/atom/icon/src/styles/index.scss
+++ b/components/atom/icon/src/styles/index.scss
@@ -1,6 +1,8 @@
 $base-class: '.sui-AtomIcon';
 
 #{$base-class} {
+  display: inherit;
+
   // Colors
   @each $key, $value in $atom-icon-colors {
     &#{$base-class}--#{$key} svg {
