fix(components/molecule/progressSteps): pr comments

--- a/components/molecule/progressSteps/src/styles/index.scss
+++ b/components/molecule/progressSteps/src/styles/index.scss
@@ -1,5 +1,5 @@
 $base-class: '.sui-MoleculeProgressSteps';
-$content-class: $base-class + '-content';
+$content-class: '#{$base-class}-content';
 
 #{$base-class} {
   &-path {
