--- a/components/molecule/progressSteps/src/styles/index.scss
+++ b/components/molecule/progressSteps/src/styles/index.scss
@@ -1,4 +1,5 @@
 $base-class: '.sui-MoleculeProgressSteps';
+$content-class: '#{$base-class}-content';
 
 #{$base-class} {
   &-path {
@@ -106,25 +107,44 @@ $base-class: '.sui-MoleculeProgressSteps';
     }
   }
   &-compressedInfo,
-  &-content {
-    overflow: hidden;
+  #{$content-class} {
     display: flex;
+    overflow: hidden;
     &-item {
       margin-right: -100%;
-      visibility: hidden;
       flex-basis: 100%;
       flex-shrink: 0;
       &--active {
         margin-right: 0;
-        visibility: inherit;
+      }
+    }
+
+    &--fixed {
+      #{$content-class}-item {
+        visibility: hidden;
+        &--active {
+          visibility: inherit;
+        }
+      }
+    }
+
+    &--fluid {
+      #{$content-class}-item {
+        display: none;
+
+        &--active {
+          display: flex;
+        }
       }
     }
   }
 
   #{$base-class}-compressedInfo {
     &-item {
+      visibility: hidden;
       &--active {
         margin-right: 0;
+        visibility: inherit;
       }
     }
   }
@@ -182,11 +202,13 @@ $base-class: '.sui-MoleculeProgressSteps';
         flex-basis: auto;
         flex-grow: 1;
         flex-shrink: 0;
+        justify-content: space-between;
         &-item {
           display: inline-flex;
+          flex-basis: inherit;
           justify-content: flex-end;
           align-content: flex-start;
-          margin-top: -100%;
+          margin-top: 0;
           margin-right: 0;
           &--active {
             margin-right: 0;
