fix(components/atom/button): atom icon sizes explicit declaration
ISSUES CLOSED: #2052

--- a/components/atom/button/src/styles/settings.scss
+++ b/components/atom/button/src/styles/settings.scss
@@ -123,8 +123,7 @@ $td-atom-button-link: none !default;
   & #{$base-class}-leftIcon,
   & #{$base-class}-rightIcon,
   & #{$base-class}-centerIcon {
-    &,
-    & [class*='Icon'] {
+    &:not(& [class*='Icon']) {
       height: $size;
       width: $size;
     }
