--- a/components/atom/button/src/styles/settings.scss
+++ b/components/atom/button/src/styles/settings.scss
@@ -126,6 +126,10 @@ $td-atom-button-link: none !default;
     &:not(& [class*='Icon']) {
       height: $size;
       width: $size;
+      display: flex;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
     }
   }
 
