--- a/components/atom/toast/demo/index.scss
+++ b/components/atom/toast/demo/index.scss
@@ -1,24 +1,3 @@
-@import '~@s-ui/theme/lib/index';
-@import '~@s-ui/react-atom-button/lib/index';
-@import '~@s-ui/react-molecule-select/lib/index';
-@import '~@s-ui/react-molecule-dropdown-option/lib/index';
+@import '~@s-ui/react-atom-icon/lib/index.scss';
 
 @import '../src/index';
-
-.DemoToast {
-  padding: $p-l;
-
-  &-content {
-    padding: $p-xl;
-  }
-
-  &-label {
-    display: block;
-    margin: $m-l 0 $m-m;
-    font-weight: $fw-bold;
-  }
-
-  .sui-AtomButton {
-    margin-top: $m-l;
-  }
-}
