--- a/components/atom/progressBar/src/ProgressBarLine/index.scss
+++ b/components/atom/progressBar/src/ProgressBarLine/index.scss
@@ -20,6 +20,12 @@ $base-class-line: '#{$base-class}Line';
     border-radius: $bdrs-progress-container;
     height: $h-progress-bar; /* Can be anything */
     position: relative;
+    box-sizing: border-box;
+    @each $size-key, $size-value in $size-atom-line-progress-bar {
+      &--size-#{$size-key} {
+        height: $size-value;
+      }
+    }
   }
 
   &Line {
@@ -46,6 +52,17 @@ $base-class-line: '#{$base-class}Line';
       transition: width
         calc(#{$trsdu-progress-bar} + #{$trsdu-progress-exrta-bar})
         $trstf-progress-bar;
+    }
+  }
+  &Line,
+  &ExtraLine {
+    &--status {
+      &-error {
+        background-color: $c-atom-line-progress-bar-status--error;
+      }
+      &-loading {
+        background-color: $c-atom-line-progress-bar-status--loading;
+      }
     }
   }
 }
