--- a/components/atom/switch/src/styles/index.scss
+++ b/components/atom/switch/src/styles/index.scss
@@ -19,7 +19,6 @@ $base-class: '.sui-AtomSwitch';
     display: flex;
     height: $h-atom-switch-container-default;
     justify-content: center;
-    outline: none;
 
     &--fullWidth {
       justify-content: space-between;
@@ -27,21 +26,6 @@ $base-class: '.sui-AtomSwitch';
 
     &:not(#{$base-class}-container--isFitted) {
       padding: $p-atom-switch-container;
-    }
-  }
-
-  &:focus {
-    #{$base-class}-container {
-      border: $bdw-m solid transparent;
-      box-shadow: none;
-      margin: -#{$bdw-m};
-    }
-  }
-  &:focus-visible {
-    #{$base-class}-container {
-      border: $bdw-m solid color-variation($c-primary, 1);
-      box-shadow: 0 0 4px 0 color-variation($c-primary, 1);
-      margin: -#{$bdw-m};
     }
   }
 
@@ -77,6 +61,11 @@ $base-class: '.sui-AtomSwitch';
     &#{$base-class}-left {
       padding-right: $p-m;
     }
+
+    &[aria-disabled='true'] {
+      color: $c-gray;
+      cursor: not-allowed;
+    }
   }
 
   &-inputContainer {
@@ -85,10 +74,68 @@ $base-class: '.sui-AtomSwitch';
     border-radius: $w-atom-switch-default * 0.5;
     cursor: pointer;
     height: $h-atom-switch-default;
+    width: $w-atom-switch-default;
     transition: margin-left $atom-switch-transition-time ease-in-out;
     padding: 0;
     box-sizing: border-box;
     position: relative;
+    outline: none;
+
+    &:focus {
+      #{$base-class}-circle {
+        border: $bdw-m solid transparent;
+        box-shadow: none;
+      }
+    }
+    &[aria-checked='true']:focus-visible,
+    &:focus-visible {
+      #{$base-class}-circle {
+        border: none;
+        box-shadow: 0 0 2px 2px color-variation($c-primary, 1);
+      }
+    }
+
+    &:disabled {
+      background-color: $c-gray-lightest;
+      border: $bdw-s solid $c-gray-lightest;
+      cursor: not-allowed;
+      #{$base-class}-circle {
+        background-color: $c-gray-lightest;
+      }
+    }
+    &[aria-checked='true'] {
+      background-color: $c-atom-switch--active;
+      border: $bdw-s solid $c-atom-switch--active;
+      cursor: pointer;
+      &:disabled {
+        cursor: not-allowed;
+      }
+
+      #{$base-class}-icon-left {
+        color: $c-atom-switch--active;
+      }
+
+      #{$base-class}-icon-right {
+        color: transparent;
+      }
+
+      #{$base-class}-circle {
+        box-shadow: 2px 0 2px 0 $c-atom-switch--active-shadow;
+      }
+    }
+
+    #{$base-class}-circle {
+      box-sizing: border-box;
+      background-color: $c-atom-switch-circle;
+      border-radius: ($h-atom-switch-default - 2) * 0.5;
+      border: $bdw-s solid $c-atom-switch-circle;
+      box-shadow: 2px 0 2px 0 $c-gray-light;
+      height: $h-atom-switch-default;
+      width: $w-atom-switch-circle-default;
+      transition: margin-left $atom-switch-transition-time ease-in-out;
+      margin: -1px;
+      display: block;
+    }
 
     #{$base-class}-icon-right,
     #{$base-class}-icon-left {
@@ -101,13 +148,14 @@ $base-class: '.sui-AtomSwitch';
       display: inline-flex;
       align-items: center;
       width: $w-atom-switch-circle-default;
+      height: $w-atom-switch-circle-default;
       justify-content: center;
-      margin: -2px;
+      margin: -1px;
       overflow: hidden;
     }
     #{$base-class}-icon-right {
-      right: 0;
-      transition: color $atom-switch-transition-time ease-in-out;
+      right: -1px;
+      transition: color math.div($atom-switch-transition-time, 2) ease-in-out;
       color: transparent;
     }
     #{$base-class}-icon-left {
@@ -118,6 +166,15 @@ $base-class: '.sui-AtomSwitch';
     }
 
     &--right {
+      &[aria-checked='true'] {
+        #{$base-class}-icon-left {
+          color: transparent;
+        }
+
+        #{$base-class}-icon-right {
+          color: $c-atom-switch--active;
+        }
+      }
       #{$base-class}-circle {
         box-shadow: -2px 0 2px 0 $c-atom-switch--active-shadow;
         margin-left: $m-atom-switch-circle-default--active;
@@ -127,64 +184,8 @@ $base-class: '.sui-AtomSwitch';
           $atom-switch-transition-time;
       }
       #{$base-class}-icon-left {
-        transition: color $atom-switch-transition-time ease-in-out;
+        transition: color math.div($atom-switch-transition-time, 2) ease-in-out;
       }
-    }
-  }
-  #{$base-class}-inputContainer {
-    width: $w-atom-switch-default;
-  }
-
-  &-circle {
-    background-color: $c-atom-switch-circle;
-    border-radius: ($h-atom-switch-default - 2) * 0.5;
-    border: $bdw-s solid $c-atom-switch-circle;
-    box-shadow: 2px 0 2px 0 $c-gray-light;
-    height: $h-atom-switch-default - 2;
-    transition: margin-left $atom-switch-transition-time ease-in-out;
-    width: $w-atom-switch-circle-default - 2;
-    margin: -1px;
-  }
-
-  &[aria-disabled='true'] {
-    color: $c-gray;
-    cursor: not-allowed;
-
-    #{$base-class}-inputContainer {
-      background-color: $c-gray-lightest;
-      border: $bdw-s solid $c-gray-lightest;
-      cursor: not-allowed;
-    }
-    #{$base-class}-circle {
-      background-color: $c-gray-lightest;
-    }
-  }
-
-  &[aria-checked='true'] {
-    & #{$base-class}-container {
-      #{$base-class}-inputContainer {
-        background-color: $c-atom-switch--active;
-        border: $bdw-s solid $c-atom-switch--active;
-        cursor: pointer;
-        #{$base-class}-icon-left {
-          color: $c-atom-switch--active;
-        }
-        #{$base-class}-icon-right {
-          color: transparent;
-        }
-        &--right {
-          #{$base-class}-icon-left {
-            color: transparent;
-          }
-          #{$base-class}-icon-right {
-            color: $c-atom-switch--active;
-          }
-        }
-      }
-    }
-
-    & #{$base-class}-circle {
-      box-shadow: 2px 0 2px 0 $c-atom-switch--active-shadow;
     }
   }
 
@@ -201,8 +202,8 @@ $base-class: '.sui-AtomSwitch';
 
           #{$base-class}-circle {
             border-radius: $w-atom-switch-small * 0.5;
-            height: $h-atom-switch-input-container-small - 2;
-            width: $h-atom-switch-input-container-small - 2;
+            height: $h-atom-switch-input-container-small;
+            width: $h-atom-switch-input-container-small;
           }
           &--right {
             #{$base-class}-circle {
@@ -213,6 +214,7 @@ $base-class: '.sui-AtomSwitch';
           #{$base-class}-icon-left {
             font-size: math.div(2, 3) * 1rem;
             width: $h-atom-switch-input-container-small;
+            height: $h-atom-switch-input-container-small;
           }
         }
       }
@@ -229,8 +231,8 @@ $base-class: '.sui-AtomSwitch';
 
           #{$base-class}-circle {
             border-radius: $w-atom-switch-large * 0.5;
-            height: $h-atom-switch-input-container-large - 2;
-            width: $h-atom-switch-input-container-large - 2;
+            height: $h-atom-switch-input-container-large;
+            width: $h-atom-switch-input-container-large;
           }
           &--right {
             #{$base-class}-circle {
@@ -241,6 +243,7 @@ $base-class: '.sui-AtomSwitch';
           #{$base-class}-icon-left {
             font-size: math.div(3, 2) * 1rem;
             width: $h-atom-switch-input-container-large;
+            height: $h-atom-switch-input-container-large;
           }
         }
       }
