fix(components/molecule/stepper): WIP

--- a/components/molecule/stepper/src/styles/index.scss
+++ b/components/molecule/stepper/src/styles/index.scss
@@ -9,6 +9,7 @@ $base-class: '.sui-MoleculeStepper';
   margin: 0;
   padding: 0;
   &--design {
+    // Do your magic
   }
   &--alignment {
     &-vertical {
