--- a/components/molecule/stepper/src/styles/index.scss
+++ b/components/molecule/stepper/src/styles/index.scss
@@ -8,9 +8,6 @@ $base-class: '.sui-MoleculeStepper';
   list-style: none;
   margin: 0;
   padding: 0;
-  &--design {
-    // Do your magic
-  }
   &--alignment {
     &-vertical {
       flex-direction: column;
@@ -25,6 +22,22 @@ $base-class: '.sui-MoleculeStepper';
     @each $jc-key, $jc-value in $jc-molecule-stepper {
       &-#{$jc-key} {
         justify-content: $jc-value;
+      }
+    }
+  }
+  &--design {
+    &-default {
+      // do your magic
+    }
+    &-compressed {
+      &#{$base-class}--alignment {
+        &-vertical {
+          row-gap: $sz-base;
+        }
+        &-horizontal {
+          position: relative;
+          gap: $sz-base;
+        }
       }
     }
   }
