feat(components/molecule/photoUploader): add new labels feature to tag images

--- a/components/molecule/photoUploader/src/index.scss
+++ b/components/molecule/photoUploader/src/index.scss
@@ -2,6 +2,8 @@
 @import '~@s-ui/react-atom-button/lib/index';
 @import '~@s-ui/react-atom-icon/lib/index';
 @import '~@s-ui/react-molecule-notification/lib/index';
+@import '~@s-ui/react-molecule-select/lib/index';
+@import '~@s-ui/react-molecule-dropdown-option/lib/index';
 
 @import './styles/settings.scss';
 @import './styles/index.scss';
