fix(components/molecule/stepper): syles

--- a/components/molecule/stepper/src/styles/index.scss
+++ b/components/molecule/stepper/src/styles/index.scss
@@ -4,7 +4,7 @@ $base-class: '.sui-MoleculeStepper';
   box-sizing: content-box;
   display: flex;
   flex-wrap: nowrap;
-  align-items: center;
+  align-items: stretch;
   list-style: none;
   margin: 0;
   padding: 0;
