--- a/components/molecule/stepper/src/Step/index.scss
+++ b/components/molecule/stepper/src/Step/index.scss
@@ -7,6 +7,11 @@ $base-class-step: #{$base-class}Step;
   display: flex;
   flex-direction: column;
   align-items: center;
+  #{$base-class-step}Icon {
+    & > * {
+      color: $c-gray-light;
+    }
+  }
   #{$base-class-step}Label {
     color: $c-gray-dark-2;
   }
@@ -166,11 +171,17 @@ $base-class-step: #{$base-class}Step;
 
   &--current {
     color: $c-primary-light-1;
+    #{$base-class-step}Icon > * {
+      color: $c-primary-light-1;
+    }
   }
   &--visited {
     color: $c-primary;
     + #{$base-class-step}Connector #{$base-class-step}ConnectorLine {
       background-color: $c-primary;
+    }
+    #{$base-class-step}Icon > * {
+      color: $c-primary;
     }
   }
 }
