--- a/components/molecule/progressSteps/src/index.scss
+++ b/components/molecule/progressSteps/src/index.scss
@@ -1,4 +1,5 @@
 @import '~@s-ui/theme/lib/index';
+@import '~@s-ui/react-molecule-stepper/lib/index';
 
 @import './styles/settings.scss';
 @import './styles/index.scss';
