--- a/components/molecule/photoUploader/src/styles/index.scss
+++ b/components/molecule/photoUploader/src/styles/index.scss
@@ -137,14 +137,13 @@ $skeleton-class: '#{$base-class}-skeleton';
   box-shadow: $bxsh-photo-uploader-thumb-card;
   cursor: grab;
   display: inline-block;
-  overflow: hidden;
 
   &Card {
     background: $bg-photo-uploader-thumb-card;
     display: flex;
     flex-direction: column;
     min-width: 0;
-    overflow: hidden;
+
     position: relative;
     height: 100%;
 
@@ -204,6 +203,10 @@ $skeleton-class: '#{$base-class}-skeleton';
         display: flex;
         height: 100%;
       }
+    }
+
+    &-content {
+      padding: $p-photo-uploader-content;
     }
 
     &-actions {
