--- a/components/molecule/photoUploader/src/styles/settings.scss
+++ b/components/molecule/photoUploader/src/styles/settings.scss
@@ -43,6 +43,7 @@ $jc-photo-uploader: center !default;
 $p-photo-uploader-action-buttons: $p-m 0 !default;
 $p-photo-uploader-desktop: $p-xl !default;
 $p-photo-uploader: $p-m !default;
+$p-photo-uploader-content: $p-m !default;
 $s-photo-uploader-thumb-icons: 16px !default;
 $w-photo-uploader-thumb-image-desktop: 160px !default;
 $w-photo-uploader-thumb-image: 100% !default;
